src/snapshots/tests__source-2.snap
---
source: src/tests.rs
expression: parsed
---
External(
    File(
        "\'file\'",
        None,
    ),
)
