src/snapshots/tests__source-3.snap
---
source: src/tests.rs
expression: parsed
---
Dag(
    Name(
        LowerWord(
            "name",
        ),
    ),
)
