src/snapshots/tests__system_constant.snap
---
source: src/tests.rs
expression: parsed
---
SystemConstant(
    SystemFunctor(
        AtomicSystemWord(
            DollarDollarWord(
                LowerWord(
                    "system_constant",
                ),
            ),
        ),
    ),
)
