src/snapshots/tests__system_functor.snap
---
source: src/tests.rs
expression: parsed
---
SystemFunctor(
    AtomicSystemWord(
        DollarDollarWord(
            LowerWord(
                "system_functor",
            ),
        ),
    ),
)
