src/snapshots/tests__tests::test_annotations.snap
---
created: "2019-06-11T12:13:10.530198672Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Annotations {
    source: Unknown
}
