src/snapshots/tests__tests::test_assoc_connective-2.snap
---
created: "2019-07-19T14:22:27.544397007Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Or
