src/snapshots/tests__tests::test_assoc_connective.snap
---
created: "2019-07-19T14:48:20.115211791Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
And
