src/snapshots/tests__tests::test_atomic_word-2.snap
---
created: "2019-06-11T12:13:10.536120502Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
"\'single quoted\'"
