src/snapshots/tests__tests::test_cnf_annotated.snap
---
created: "2019-06-11T12:13:10.530225959Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Cnf(
    LowerWord(
        "test"
    ),
    Axiom,
    CnfFormula(
        [
            Literal(
                Boolean(
                    true
                )
            )
        ]
    ),
    None
)
